# feedback-insight-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/api/v1/: __init__.py  router.py
app/api/v1/routers/: __init__.py  feedbacks.py
app/core/: __init__.py  config.py  genai.py  logging.py  rate_limit.py  security.py
app/prompts/: __init__.py  sentiment_prompt.py
app/schemas/: __init__.py  request.py  response.py
app/services/: ai_service.py
