[project]
name = "feedback-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "google-genai>=2.12.1",
    "pydantic-settings>=2.14.2",
    "python-json-logger>=4.1.0",
    "slowapi>=0.1.10",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", 
    "F",
    "I"
]